--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
-    <title>ameer khan Timer</title>
+    <title>Timer</title>
   </head>   
   <body>
     <div id="root"></div>
